tests/ui/traits/next-solver/overflow/exponential-trait-goals.stderr
error[E0275]: overflow evaluating the requirement `_: Sized`
  --> $DIR/exponential-trait-goals.rs:17:13
   |
LL |     impls::<W<_>>();
   |             ^^^^
   |
note: required for `W<(W<_>, W<_>)>` to implement `Trait`
  --> $DIR/exponential-trait-goals.rs:7:12
   |
LL | impl<T, U> Trait for W<(W<T>, W<U>)>
   |      -     ^^^^^     ^^^^^^^^^^^^^^^
   |      |
   |      unsatisfied trait bound introduced here
note: required by a bound in `impls`
  --> $DIR/exponential-trait-goals.rs:14:13
   |
LL | fn impls<T: Trait>() {}
   |             ^^^^^ required by this bound in `impls`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
